--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <div class="chat-container">
   <div class="chat-header">
-    <img src="https://i.imgur.com/9QO6M5G.png" alt="Flo Assist Avatar" />
+    <img src="avatar.png" alt="Flo Assist Avatar" />
     <h2>Flo Assist</h2>
   </div>
 
   <div class="chat-body" id="chatBody">
     <div class="bot-message">
-      <img src="https://i.imgur.com/9QO6M5G.png" class="avatar" />
+        <img src="avatar.png" class="avatar" />
       <p>Hello! 👋 I’m <strong>Flo Assist</strong>. How can I help you today?</p>
     </div>
   </div>
